book.csv userID추가 및 독서기록 확인 페이지 생성

--- a/public/register.html
+++ b/public/register.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>회원가입</title>
     <link rel="stylesheet" href="/css/register.css">
+    
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 
@@ -43,7 +44,7 @@
                     alert(response.data.comment);
                 } else {
                     alert(response.data.comment);
-                    window.location.href = serverURL+'/book';
+                    window.location.href = serverURL+'/book.html';
 
                 }
             })
